syntax = "proto3";

package eraft_proto;

//
// the log entry type
// 1.normal -> like put, get key
// 2.conf change -> cluster config change
//
enum EntryType {
    EntryNormal = 0;
    EntryConfChange = 1;
}

//
// raft basic log entry definition
//
message Entry {
    EntryType entry_type = 1;
    uint64    term = 2;
    int64     index = 3;
    bytes     data = 4;
}

//
// client op type
//
enum OpType {
    OpPut = 0;
    OpAppend = 1;
    OpGet = 2;
    OpConfigChange = 3;
    OpDeleteBuckets = 4;
    OpInsertBuckets = 5;
}

//
// client command request
//
message CommandRequest {
    string key = 1;
    string value = 2;
    OpType op_type = 3;
    int64  client_id = 4;
    int64  command_id = 5;
    bytes  context = 6;
}

//
// client command response
//
message CommandResponse {
    string value = 1;
    int64  leader_id = 2;
    int64  err_code = 3;
}

service RaftService {
    rpc DoCommand (CommandRequest) returns (CommandResponse) {}
}
